syntax = "proto3";

option csharp_namespace = "LedgerGrpc"; // Change this to your actual C# namespace

package ledger;

service LedgerService {
  rpc AddLedger (LedgerRequest) returns (LedgerResponse);
}

message LedgerRequest {
  string organizationId = 1;
  string ledgerName = 2;
  string openingBalance = 3;
  string drCr = 4;
  string createdBy = 5;
  string updatedBy = 6;
  string contactName = 7;
  string contactNumber = 8;
  string address = 9;
  string gstNumber = 10;
  string bankName = 11;
  string accountNumber = 12;
  string ifscCode = 13;
  string upiId = 14;
}


message LedgerResponse {
  string ledgerId = 1;
  int32 statusCode = 2;
}
